add AWS usage operation to AwsMachineImage
